# DemoList

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/study/demolist/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/study/demolist/: CustomImageView.java  CustomImageView1.java  DemoActivity.java  MainActivity.kt  PayView.java  TitleLayout.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml
app/src/test/java/com/study/demolist/: ExampleUnitTest.kt
demoApp/: build.txt
demoApp/src/main/: AndroidManifest.xml
demoApp/src/main/java/: MainActivity
demoApp/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
study_cmake/src/main/: AndroidManifest.xml
study_cmake/src/main/cpp/: CMakeLists.txt  native-lib.cpp
study_cmake/src/main/java/com/study/study_cmake/: MainCMakeActivity.java
study_cmake/src/main/res/layout/: activity_main.xml
study_ffmpeg/: CMakeLists.txt  build.gradle
study_ffmpeg/src/main/: AndroidManifest.xml
study_ffmpeg/src/main/cpp/: native-lib.cpp
study_ffmpeg/src/main/java/com/hello/study_ffmpeg/: FFmpegMainActivity.java  MyClass.java  Player.java
study_ffmpeg/src/main/res/layout/: activity_main.xml
study_ndk/: build.gradle  步骤.txt
study_ndk/src/main/: AndroidManifest.xml
study_ndk/src/main/java/com/study/study_ndk/: MyClass.java  NdkMainActivity.java
study_ndk/src/main/ndkBuild/: Android.mk  hello-jni.c
study_ndk/src/main/res/layout/: activity_main.xml
study_recyclerview/src/main/: AndroidManifest.xml
study_recyclerview/src/main/java/com/study/study_recyclerview/: MainRecyclerViewActivity.java  MyClass.java  Recycler.java  RecyclerView.java
study_recyclerview/src/main/res/layout/: activity_main.xml
study_svg/src/main/: AndroidManifest.xml
study_svg/src/main/java/com/study/study_svg/: MainSVGActivity.kt  MapView1.kt  MyClass.java  ProvinceItem.kt
study_svg/src/main/res/layout/: activity_main.xml
